fma-prototype-deploiement.ucp.istio.yaml
################################
# Namespace fma-prototype
################################
apiVersion: v1
kind: Namespace
metadata:
  name: fma-prototype
---
###########################################################################
# Service fma-prototype-unit-bd
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-bd
    component: fma-prototype-unit-bd
  name: fma-prototype-unit-bd
  namespace: fma-prototype
spec:
  type: ClusterIP
  selector:
    app: fma-prototype-unit-bd
    component: fma-prototype-unit-bd
  ports:
  - name: autre
    protocol: TCP
    port: 22
  - name: oracle
    protocol: TCP
    port: 1521
  - name: apex
    protocol: TCP
    port: 8080
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  creationTimestamp: null
  name: fma-prototype-unit-bd
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-bd
      component: fma-prototype-unit-bd
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"15bbcd92b59e99a83360c48bd7af9e84ffd5b961b914e8febcee0e38d08b773e","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: fma-prototype-unit-bd
        component: fma-prototype-unit-bd
    spec:
      containers:
      - image: ramqlic.azurecr.io/ramq.fma.prototype.bd.oracle.xe.11g:859
        imagePullPolicy: IfNotPresent
        name: fma-prototype-unit-bd
        ports:
        - containerPort: 1521
        - containerPort: 8080
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - fma-prototype-unit-bd
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy_debug:0.7.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      imagePullSecrets:
      - name: registre-dev
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
###########################################################################
# Service fma-prototype-unit-redis
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-redis
    component: fma-prototype-unit-redis
  name: fma-prototype-unit-redis
  namespace: fma-prototype
spec:
  type: ClusterIP
  selector:
    app: fma-prototype-unit-redis
    component: fma-prototype-unit-redis
  ports:
  - name: redis
    protocol: TCP
    port: 6379
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  creationTimestamp: null
  name: fma-prototype-unit-redis
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-redis
      component: fma-prototype-unit-redis
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"15bbcd92b59e99a83360c48bd7af9e84ffd5b961b914e8febcee0e38d08b773e","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: fma-prototype-unit-redis
        component: fma-prototype-unit-redis
    spec:
      containers:
      - image: redis:latest
        imagePullPolicy: IfNotPresent
        name: fma-prototype-unit-redis
        ports:
        - containerPort: 6379
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - fma-prototype-unit-redis
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy_debug:0.7.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
###########################################################################
# Service fma-prototype-unit-securite
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-securite
    component: fma-prototype-unit-securite
  name: fma-prototype-unit-securite
  namespace: fma-prototype
spec:
  type: NodePort
  selector:
    app: fma-prototype-unit-securite
    component: fma-prototype-unit-securite
  ports:
  - name: http
    protocol: TCP
    port: 8080
    #nodePort: 30794
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  creationTimestamp: null
  name: fma-prototype-unit-securite
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-securite
      component: fma-prototype-unit-securite
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"15bbcd92b59e99a83360c48bd7af9e84ffd5b961b914e8febcee0e38d08b773e","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: fma-prototype-unit-securite
        component: fma-prototype-unit-securite
    spec:
      containers:
      - env:
        - name: RPERT_SECRET
          value: /app/secrets
        - name: CONFIG_SERVR_IDT
          value: fma_prototype_unit.Config.ServrIdt.json
        - name: PATH_BASE
          value: /fmaprototype_securite
        image: ramqlic.azurecr.io/ramq.com.serveuridentite:latest
        imagePullPolicy: IfNotPresent
        name: fma-prototype-unit-securite
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /app/secrets
          name: secrets
          readOnly: true
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - fma-prototype-unit-securite
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy_debug:0.7.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      imagePullSecrets:
      - name: registre-dev
      volumes:
      - name: secrets
        secret:
          secretName: fma-prototype-unit-config-servridt-json
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
###########################################################################
# Service fma-prototype-unit-web
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-web
    component: fma-prototype-unit-web
  name: fma-prototype-unit-web
  namespace: fma-prototype
spec:
  type: NodePort
  selector:
    app: fma-prototype-unit-web
    component: fma-prototype-unit-web
  ports:
  - name: http
    protocol: TCP
    #nodePort: 30790
    port: 8080
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  creationTimestamp: null
  name: fma-prototype-unit-web
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-web
      component: fma-prototype-unit-web
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"15bbcd92b59e99a83360c48bd7af9e84ffd5b961b914e8febcee0e38d08b773e","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: fma-prototype-unit-web
        component: fma-prototype-unit-web
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: unitaire
        - name: SERVEURLA
          value: http://fma-prototype-unit-api
        - name: REDIS_URL
          value: fma-prototype-unit-redis:6379
        - name: PATH_BASE
          value: /fmaprototype
        - name: OIDC_FOURNISSEUR
          valueFrom:
            configMapKeyRef:
              key: OIDC_FOURNISSEUR
              name: fma-prototype-unit-config
        - name: OIDC_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              key: OIDC_CLIENT_ID
              name: fma-prototype-unit-config
        - name: OIDC_AUTORITE
          valueFrom:
            configMapKeyRef:
              key: OIDC_AUTORITE
              name: fma-prototype-unit-config
        - name: OIDC_CLIENT_SECRET
          valueFrom:
            configMapKeyRef:
              key: OIDC_CLIENT_SECRET
              name: fma-prototype-unit-config
        - name: OIDC_SCOPES
          valueFrom:
            configMapKeyRef:
              key: OIDC_SCOPES
              name: fma-prototype-unit-config
        - name: GROUPE_ADMIN
          valueFrom:
            configMapKeyRef:
              key: GROUPE_ADMIN
              name: fma-prototype-unit-config
        - name: GROUPE_UTILISATEUR
          valueFrom:
            configMapKeyRef:
              key: GROUPE_UTILISATEUR
              name: fma-prototype-unit-config
        image: ramqlic.azurecr.io/ramq.fma.iu.web.prototype:latest
        imagePullPolicy: IfNotPresent
        name: fma-prototype-unit-web
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /app/log
          name: log
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - fma-prototype-unit-web
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy_debug:0.7.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      imagePullSecrets:
      - name: registre-dev
      volumes:
      - hostPath:
          path: /var/prototype
          type: DirectoryOrCreate
        name: log
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
###########################################################################
# Service fma-prototype-unit-api
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-api
    component: fma-prototype-unit-api
  name: fma-prototype-unit-api
  namespace: fma-prototype
spec:
  type: ClusterIP
  selector:
    app: fma-prototype-unit-api
    component: fma-prototype-unit-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  creationTimestamp: null
  name: fma-prototype-unit-api
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-api
      component: fma-prototype-unit-api
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"15bbcd92b59e99a83360c48bd7af9e84ffd5b961b914e8febcee0e38d08b773e","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: fma-prototype-unit-api
        component: fma-prototype-unit-api
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: unitaire
        - name: RPERT_SECRET
          value: /app/secrets/..data
        - name: INFO_CONNEXION
          value: fma-prototype-unit-carte-connexion-oracle.json
        - name: CHAINE_CONNEXION
          value: Direct=True;Service Name=XE;Connection Timeout=30;
        - name: HEALTH_CHECK_BD
          value: http://fma-prototype-unit-bd:8080/apex
        - name: OIDC_AUDIENCE
          valueFrom:
            configMapKeyRef:
              key: OIDC_AUDIENCE
              name: fma-prototype-unit-config
        - name: OIDC_AUTORITE
          valueFrom:
            configMapKeyRef:
              key: OIDC_AUTORITE
              name: fma-prototype-unit-config
        - name: OIDC_REQUIERT_HTTPS
          valueFrom:
            configMapKeyRef:
              key: OIDC_REQUIERT_HTTPS
              name: fma-prototype-unit-config
        - name: GROUPE_ADMIN
          valueFrom:
            configMapKeyRef:
              key: GROUPE_ADMIN
              name: fma-prototype-unit-config
        - name: GROUPE_UTILISATEUR
          valueFrom:
            configMapKeyRef:
              key: GROUPE_UTILISATEUR
              name: fma-prototype-unit-config
        image: ramqlic.azurecr.io/ramq.fma.coord.prototype:latest
        imagePullPolicy: IfNotPresent
        name: fma-prototype-unit-api
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /app/secrets
          name: secrets
          readOnly: true
        - mountPath: /app/log
          name: log
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - fma-prototype-unit-api
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy_debug:0.7.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      imagePullSecrets:
      - name: registre-dev
      volumes:
      - name: secrets
        projected:
          sources:
          - secret:
              name: fma-prototype-unit-devart-data-oracle
          - secret:
              name: fma-prototype-unit-carte-connexion-oracle-json
      - hostPath:
          path: /var/prototype
          type: DirectoryOrCreate
        name: log
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
###########################################################################
# Ingress
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fma-prototype-ingress
  namespace: fma-prototype
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /fmaprototype
        backend:
          serviceName: fma-prototype-unit-web
          servicePort: 8080
      - path: /fmaprototype/.*
        backend:
          serviceName: fma-prototype-unit-web
          servicePort: 8080
      - path: /fmaprototype_securite
        backend:
          serviceName: fma-prototype-unit-securite
          servicePort: 8080
      - path: /fmaprototype_securite/.*
        backend:
          serviceName: fma-prototype-unit-securite
          servicePort: 8080
      - path: /swagger
        backend:
          serviceName: fma-prototype-unit-api
          servicePort: 8080
      - path: /swagger/.*
        backend:
          serviceName: fma-prototype-unit-api
          servicePort: 8080
---
