fma-prototype-deploiement.ucp.yaml
################################
# Namespace fma-prototype
################################
apiVersion: v1
kind: Namespace
metadata:
  name: fma-prototype
---
###########################################################################
# Service fma-prototype-unit-bd
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-bd
    component: fma-prototype-unit-bd
  name: fma-prototype-unit-bd
  namespace: fma-prototype
spec:
  type: ClusterIP
  selector:
    app: fma-prototype-unit-bd
    component: fma-prototype-unit-bd
  ports:
  - name: autre
    protocol: TCP
    port: 22
  - name: oracle
    protocol: TCP
    port: 1521
  - name: apex
    protocol: TCP
    port: 8080
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: fma-prototype-unit-bd
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-bd
      component: fma-prototype-unit-bd
  template:
    metadata:
      labels:
        app: fma-prototype-unit-bd
        component: fma-prototype-unit-bd
    spec:
      containers:
      - name: fma-prototype-unit-bd
        image: ramqlic.azurecr.io/ramq.fma.prototype.bd.oracle.xe.11g:859
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1521
        - containerPort: 8080
      imagePullSecrets:
      - name: registre-dev
---
###########################################################################
# Service fma-prototype-unit-redis
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-redis
    component: fma-prototype-unit-redis
  name: fma-prototype-unit-redis
  namespace: fma-prototype
spec:
  type: ClusterIP
  selector:
    app: fma-prototype-unit-redis
    component: fma-prototype-unit-redis
  ports:
  - name: redis
    protocol: TCP
    port: 6379
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: fma-prototype-unit-redis
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-redis
      component: fma-prototype-unit-redis
  template:
    metadata:
      labels:
        app: fma-prototype-unit-redis
        component: fma-prototype-unit-redis
    spec:
      containers:
      - name: fma-prototype-unit-redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
---
###########################################################################
# Service fma-prototype-unit-securite
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-securite
    component: fma-prototype-unit-securite
  name: fma-prototype-unit-securite
  namespace: fma-prototype
spec:
  type: NodePort
  selector:
    app: fma-prototype-unit-securite
    component: fma-prototype-unit-securite
  ports:
  - name: http
    protocol: TCP
    port: 8080
    #nodePort: 30794
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: fma-prototype-unit-securite
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-securite
      component: fma-prototype-unit-securite
  template:
    metadata:
      labels:
        app: fma-prototype-unit-securite
        component: fma-prototype-unit-securite
    spec:
      #hostNetwork: true
      containers:
      - name: fma-prototype-unit-securite
        image: ramqlic.azurecr.io/ramq.com.serveuridentite:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: fma-prototype-unit-config-servridt-json
      imagePullSecrets:
      - name: registre-dev
---
###########################################################################
# Service fma-prototype-unit-web
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-web
    component: fma-prototype-unit-web
  name: fma-prototype-unit-web
  namespace: fma-prototype
spec:
  type: NodePort
  selector:
    app: fma-prototype-unit-web
    component: fma-prototype-unit-web
  ports:
  - name: http
    protocol: TCP
    #nodePort: 30790
    port: 8080
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: fma-prototype-unit-web
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-web
      component: fma-prototype-unit-web
  template:
    metadata:
      labels:
        app: fma-prototype-unit-web
        component: fma-prototype-unit-web
    spec:
      containers:
      - name: fma-prototype-unit-web
        image: ramqlic.azurecr.io/ramq.fma.iu.web.prototype:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: log
          mountPath: /app/log
      volumes:
      - name: log
        hostPath:
          path: /var/prototype
          type: DirectoryOrCreate
      imagePullSecrets:
      - name: registre-dev
---
###########################################################################
# Service fma-prototype-unit-api
##########################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fma-prototype-unit-api
    component: fma-prototype-unit-api
  name: fma-prototype-unit-api
  namespace: fma-prototype
spec:
  type: ClusterIP
  selector:
    app: fma-prototype-unit-api
    component: fma-prototype-unit-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: fma-prototype-unit-api
  namespace: fma-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fma-prototype-unit-api
      component: fma-prototype-unit-api
  template:
    metadata:
      labels:
        app: fma-prototype-unit-api
        component: fma-prototype-unit-api
    spec:
      containers:
      - name: fma-prototype-unit-api
        image: ramqlic.azurecr.io/ramq.fma.coord.prototype:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
        - name: log
          mountPath: /app/log
      volumes:
      - name: secrets
        projected:
          sources:
          - secret:
              name: fma-prototype-unit-devart-data-oracle
          - secret:
              name: fma-prototype-unit-carte-connexion-oracle-json
      - name: log
        hostPath:
          path: /var/prototype
          type: DirectoryOrCreate
      imagePullSecrets:
      - name: registre-dev
---
###########################################################################
# Ingress
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fma-prototype-ingress
  namespace: fma-prototype
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /fmaprototype
        backend:
          serviceName: fma-prototype-unit-web
          servicePort: 8080
      - path: /fmaprototype/.*
        backend:
          serviceName: fma-prototype-unit-web
          servicePort: 8080
      - path: /fmaprototype_securite
        backend:
          serviceName: fma-prototype-unit-securite
          servicePort: 8080
      - path: /fmaprototype_securite/.*
        backend:
          serviceName: fma-prototype-unit-securite
          servicePort: 8080
      - path: /swagger
        backend:
          serviceName: fma-prototype-unit-api
          servicePort: 8080
      - path: /swagger/.*
        backend:
          serviceName: fma-prototype-unit-api
          servicePort: 8080
